src/classes/pages/assets/css/style.css
/* ... */
.builder\:toolbar button {
    border-radius: 0.25rem;
    background: var(--background-surface1);
    border: solid 1px transparent;
}

.builder\:toolbar button:hover {
    background: var(--background-surface1-5a);
    border-color: var(--background-surface2a);
}

.builder\:toolbar.always-absolute button {
    border: none;
}

.builder\:sidebar {
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    width: 25rem;
    border-right: solid 1px var(--background-surface2a);
    background: var(--background-surface1);
    display: flex;
    flex-direction: column;
    align-items: center;
    animation: SlideInFromLeft 0.15s 0s running;
    overflow: auto;
    z-index: 10000000;
    transition: all 0.15s;
}

.builder\:sidebar.full {
    width: 100vw;
}

.builder\:sidebar .options {
    display: flex;
    flex-direction: column;
    gap: var(--u-04);
    padding: var(--u-04);
    max-width: 100%;
    width: 100%;
}

.builder\:sidebar.full .options {
    width: 50%;
}

.builder\:sidebar .options button:not(.normal),
.builder\:sidebar .options .option {
    width: 100%;
    padding: var(--u-06);
    border: solid 1px var(--background-surface2a);
    display: flex;
    gap: var(--u-04);
    border-radius: var(--u-04);
    transition: box-shadow 0.15s;
}

.builder\:sidebar .options button:not(.normal):hover,
.builder\:sidebar .options .option:hover {
    box-shadow: inset 0 0 2px var(--background-surface2a);
}

.builder\:sidebar .options button:not(.normal) {
    border-color: var(--background-surface3);
}

.builder\:sidebar .options button:not(.normal).green {
    border-color: var(--green2);
}

.builder\:sidebar .options button:not(.normal).red {
    border-color: var(--red);
}

.builder\:sidebar .options input,
.builder\:sidebar .options textarea,
.builder\:sidebar .options select {
    border-radius: var(--u-04) !important;
    padding: var(--u-06) var(--u-08);
    border: solid 1px var(--background-surface2a);
    transition: border-color 0.15s;
}

.builder\:sidebar .options input,
.builder\:sidebar .options select {
    height: max-content !important;
}

.builder\:sidebar .options input:focus,
.builder\:sidebar .options textarea:focus,
.builder\:sidebar .options select:focus {
    border-color: var(--blue);
}

.builder\:sidebar .options .option {
    flex-direction: column;
}

.builder\:event-zone {
    display: contents;
}

.builder\:drag-element {
    position: relative;
    max-width: 100%;
}

.builder\:drag-zone {
    user-select: none;
    -webkit-user-select: none;
    width: 100%;
    padding: 0.5rem;
    display: none;
    height: 5px;
    position: absolute;
}

.builder\:drag-zone.top {
    border-top: dashed 2px var(--background-surface2);
    top: -10px;
}

.builder\:drag-zone.bottom {
    border-bottom: dashed 2px var(--background-surface2);
    bottom: -10px;
}

.builder\:drag-zone.active {
    border-color: var(--blue2);
    display: block;
}

.component[data-edit="true"] {
    cursor: pointer;
}

.component.hover,
.component.active {
    box-shadow: 0 0 0 2px var(--blue2);
}

.component h1 {
    width: 100%;
}

.component h1,
.component h2,
.component h3,
.component h4,
.component h5,
.component h6 {
    text-align: var(--Alignment);
}

.component * .htag {
    display: none;
}

.builder\:toolbar.always-absolute {
    height: max-content !important;
}

@media screen and (max-width: 900px) {
    .builder\:sidebar.full .options {
        width: 22rem;
    }

    .component.builder\:page[data-edit="true"] {
        /* adjust for toolbar */
        padding-top: 3.5rem;
    }

    .builder\:toolbar:not(.always-absolute):not(.verticle) {
        width: 100vw;
        top: 0;
        left: 0;
        border-radius: 0;
    }

    .builder\:sidebar {
        width: 100vw;
    }
}

/* nav */
nav {
    padding: var(--u-10) calc(var(--u-10) * 1.5);
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    background: var(--background-surface);
    border-bottom: solid 1px var(--background-surface2);
    position: -webkit-sticky;
    position: sticky;
    width: 100%;
    top: 0;
    z-index: 9999;
    max-width: 100vw;
    animation: SlideInFromTop 0.15s 0s running;
    transition: background 0.15s;
    height: var(--nav-height);
}

nav a {
    color: var(--text-color);
    font-weight: 600;
}

nav.scroll {
    background: var(--background-surface1);
    border-color: var(--background-surface2);
}

.hr-left {
    position: relative;
}

.hr-left:before {
    content: "";
    position: absolute;
    top: calc(50% - 12px);
    left: 0px;
    height: 24px;
    border-left: 1px solid var(--background-surface2);
}

/* block information pane */

:root {
    --block-background: hsl(0, 0%, 0%);
    --block-background-lighter: hsl(0, 0%, 15%);
    --block-accent: hsl(216, 74%, 38%);
    --block-accent-muted: hsl(216, 74%, 32%);
    --block-text: white;
    --block-font: monospace;
}

.block-dialog {
    font-family: monospace;
    background: var(--block-background);
    color: var(--block-text);
    position: fixed;
    z-index: 20000000;
    width: 25rem;
    max-width: 100%;
    max-height: 50rem;
    overflow-y: auto;
}

.block-dialog:hover {
    box-shadow: 0 0 2px var(--block-text);
}

.block-dialog * {
    font-family: monospace;
}

.block-dialog *:not(span) {
    padding: var(--u-04);
}

.block-dialog .block-header {
    background: var(--block-accent-muted);
    transition: background 0.15s;
    cursor: move;
    padding: 0;
    user-select: none;
    position: sticky;
    top: 0;
}

.block-dialog .block-header span:first-child {
    /* header title */
    padding: var(--u-02) var(--u-04);
}

.block-dialog:hover .block-header,
.block-dialog:focus-within .block-header,
.block-dialog:active .block-header {
    background: var(--block-accent);
}
/* ... */

